--- a/Quiz-Creator/Quiz-Creator.csproj
+++ b/Quiz-Creator/Quiz-Creator.csproj
@@ -61,6 +61,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Question.cs" />
+    <Compile Include="Quiz.cs" />
     <Compile Include="StartScreen.cs">
       <SubType>Form</SubType>
     </Compile>
