--- a/Quiz-Creator/Quiz-Creator.csproj
+++ b/Quiz-Creator/Quiz-Creator.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateScreen.Designer.cs">
+      <DependentUpon>CreateScreen.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoginScreen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +66,7 @@
       <DependentUpon>MakerScreen.cs</DependentUpon>
     </Compile>
     <Compile Include="MatchingQuesion.cs" />
+    <Compile Include="MCQuestion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question.cs" />
@@ -76,6 +83,7 @@
     <Compile Include="TakerScreen.Designer.cs">
       <DependentUpon>TakerScreen.cs</DependentUpon>
     </Compile>
+    <Compile Include="User.cs" />
     <EmbeddedResource Include="LoginScreen.resx">
       <DependentUpon>LoginScreen.cs</DependentUpon>
     </EmbeddedResource>
@@ -111,6 +119,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="LocalQuizzes.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
     <Content Include="SampleQuizSaveFormat.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
