--- a/Quiz-Creator/Quiz-Creator.csproj
+++ b/Quiz-Creator/Quiz-Creator.csproj
@@ -60,6 +60,12 @@
     <Compile Include="CreateScreen.Designer.cs">
       <DependentUpon>CreateScreen.cs</DependentUpon>
     </Compile>
+    <Compile Include="JoinCourseScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="JoinCourseScreen.Designer.cs">
+      <DependentUpon>JoinCourseScreen.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoginScreen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +105,9 @@
     <Compile Include="User.cs" />
     <EmbeddedResource Include="CourseSelectScreen.resx">
       <DependentUpon>CourseSelectScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="JoinCourseScreen.resx">
+      <DependentUpon>JoinCourseScreen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginScreen.resx">
       <DependentUpon>LoginScreen.cs</DependentUpon>
