--- a/Quiz-Creator/Quiz-Creator.csproj
+++ b/Quiz-Creator/Quiz-Creator.csproj
@@ -48,6 +48,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Course.cs" />
+    <Compile Include="CourseQuizzesList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CourseQuizzesList.Designer.cs">
+      <DependentUpon>CourseQuizzesList.cs</DependentUpon>
+    </Compile>
     <Compile Include="CourseSelectScreen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -103,6 +109,9 @@
       <DependentUpon>TakerScreen.cs</DependentUpon>
     </Compile>
     <Compile Include="User.cs" />
+    <EmbeddedResource Include="CourseQuizzesList.resx">
+      <DependentUpon>CourseQuizzesList.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CourseSelectScreen.resx">
       <DependentUpon>CourseSelectScreen.cs</DependentUpon>
     </EmbeddedResource>
